--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">TAcademySampleApp</string>
 
     <string name="title_search">Search</string>
-    <string name="title_repository">Repository</string>
     <string name="title_user_info">Info</string>
-    <string name="title_license">License</string>
+    <string name="title_icon_made_by">Icons made by flaticon</string>
     <string name="label_search">Search</string>
     <string name="hint_search_repository">Search repository</string>
+    <string name="message_empty_view">No result repositories</string>
 </resources>
