--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="label_search">Search</string>
     <string name="hint_search_repository">Search repository</string>
     <string name="message_empty_view">No result repositories</string>
+    <string name="message_search_github_repository">Search Github repository</string>
 </resources>
